--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 * {
     box-sizing: border-box;
     scroll-behavior: smooth;
+    position: relative;
 }
 
 :root {
@@ -936,7 +937,7 @@ h2 {
     }
 }
 
-@media (min-width: 600px) and (max-width: 768px) {                /*  Не переносится карточка */
+@media (min-width: 600px) and (max-width: 768px) {
     .studio-item {
         width: calc((100% - var(--gap-cards)*1)/2);
     }
@@ -1198,10 +1199,6 @@ h2 {
 
 .subscriptions-item {
     width: calc((100% - var(--gap-cards)*2)/3);
-
-    display: flex;
-    flex-direction: column;
-    /* position: relative; */
 }
 
 @media (max-width: 600px) {
@@ -1210,7 +1207,7 @@ h2 {
     }
 }
 
-@media (min-width: 600px) and (max-width: 768px) {          /* не применяется ширина к элементу  */
+@media (min-width: 600px) and (max-width: 768px) {
     .subscriptions-item {
         width: calc((100% - var(--gap-cards)*1)/2);
     }
@@ -1222,13 +1219,15 @@ h2 {
     }
 }
 
-/* попробовать сделать через позиционирование */
+.blur-substrate {
+    backdrop-filter: blur(1.5px);
+    padding: 10px;
+}
+
+
 .subscriptions-pouring {
-    margin: 10px;
     border: 1px solid var(--main-color);
     background-color: rgba(0, 0, 0, 0.52);
-
-    /* position: absolute; */
 }
 
 .rate {
@@ -1243,6 +1242,9 @@ h2 {
     text-align: center;
     color: var(--white);
     padding: 20px 0px;
+
+    text-decoration: underline solid var(--dark-main);
+    text-underline-offset: 5px;
 }
 
 @media (max-width: 320px) {
