--- a/css/schedule.css
+++ b/css/schedule.css
@@ -34,6 +34,7 @@
     --shadow-menu: rgba(0, 0, 0, 0.25);
     --shadow: rgba(115, 115, 115, 0.25);
     --shadow-title: rgba(0, 0, 0, 0.25);
+    --substrate-transparent: rgba(0, 0, 0, 0.25);
 
     --gap-directions: 20px;
     --gap-cards: 20px;
@@ -321,7 +322,7 @@ h2 {
 /* header */
 
 .background-img {
-    background-image: url(/images/background.png);
+    background-image: url(/images/background-schedule.png);
     border-bottom: 6px solid var(--main-color);
     background-size: cover;
     background-position: top;
@@ -803,25 +804,13 @@ h2 {
     background-position: top;
 }
 
-/* .schedule-position {
-    position: relative;
-}*/
-
-
-/*.cards-item-img::after {
-    content: '';
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0; 
-    left: 0;
-    background-color: var(--shadow-title);
-} */
+.substrate-transparent {
+    background-color: var(--substrate-transparent);
+}
 
 .name-schedule {
     padding: 120px 20px 0px 0px;
     color: var(--white);
-
 }
 
 .accent-schedule {
